# eu5-mod-orchestrator

./: .gitignore  README.md  pyproject.toml
docs/: index.html
docs/examples/: goods_flow_explorer.html
src/eu5_mod_orchestrator/: __init__.py  artifacts.py  blueprints.py  cli.py  config.py  deploy.py  scaffold.py  workflow.py
src/eu5_mod_orchestrator/adapters/: __init__.py  building_pipeline.py  labeling_pipeline.py  parser.py  population_capacity.py
tests/: test_blueprints.py  test_building_pipeline_adapter.py  test_config.py  test_deploy.py  test_parser_adapter.py  test_scaffold.py  test_workflow.py
